--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 
 dependencies {
     implementation 'androidx.room:room-common:2.4.3'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
     def room_version = "2.4.1"
 
     implementation "androidx.room:room-runtime:$room_version"
