--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.ConsultaMedica"
         tools:targetApi="31">
         <activity
+            android:name=".Specialities"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -22,6 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".pages.doctors.Doctors"></activity>
+        <activity android:name=".pages.specialities.Specialities"></activity>
     </application>
 
 </manifest>
