--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
             ]
         }
     }
+    dataBinding {
+        enabled true
+    }
 }
 dependencies {
     implementation 'androidx.room:room-common:2.4.3'
