--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Gerencia_sala_ufms"
         tools:targetApi="31" >
         <activity
-            android:name=".HomeActivity"
+            android:name=".pages.home.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
