--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.meicansoftware.consultamedica">
+    package="com.meicansoftware.gerenciasala">
 
     <application
         android:allowBackup="false"
@@ -13,9 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ConsultaMedica"
         tools:targetApi="31">
-        <activity
-            android:name=".Specialities"
-            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -25,8 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".pages.doctors.Doctors"></activity>
-        <activity android:name=".pages.specialities.Specialities"></activity>
-    </application>
+
+        <activity
+            android:name=".pages.login.Login"
+            android:exported="false" />
+
+  </application>
 
 </manifest>
