--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity
             android:name=".pages.login.Login"
             android:exported="false" />
-
+        <activity android:name=".pages.home.Home"></activity>
   </application>
 
 </manifest>
