--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".pages.courses.Courses"></activity>
         <activity android:name=".pages.reservations.Reservations"></activity>
         <activity android:name=".pages.events.Events"></activity>
+        <activity android:name=".pages.rooms.Rooms"></activity>
   </application>
 
 </manifest>
